@startuml CLI components

interface CommandParamCompleter {
    complete(value: &str) -> String
}

class ParamMetadata {
    +is_optional() -> bool
    +name() -> &str
    +help() -> &str
    +completer() -> Option<&Completer>
}
CommandParamCompleter ..> ParamMetadata

class CommandMetadata {
    +name() -> &str
    +help() -> &str
    +main_param()-> &CommandParam
    +params() -> &[&CommandParam]
}
ParamMetadata ..> CommandMetadata

interface Command {    
    +metadata() -> &CommandMetadata
    +execute(param_values: Map<String, String>)
}
CommandMetadata ..> Command

class EntryPoint {
    +main()
    -execReadline()
    -execBatch()
}

class ApplicationContext {
    +set_cmd_prompt()
    +set_progress()
    +exit()
}
EntryPoint --* ApplicationContext

class LibindyContext
EntryPoint --* LibindyContext

class Libindy
EntryPoint --* Libindy

class WalletCreateCommand
Command --|> WalletCreateCommand
EntryPoint --* WalletCreateCommand
ApplicationContext --o WalletCreateCommand
LibindyContext --o WalletCreateCommand
Libindy --o WalletCreateCommand


class CommandExecutor {    
    +addCommand(command: &Command)
    +execute(line: &str)
    +complete(line: &str, position: usize)
}
EntryPoint --* CommandExecutor
Command ..> CommandExecutor
WalletCreateCommand --o CommandExecutor

@enduml